--- a/views/addEmployee.html
+++ b/views/addEmployee.html
@@ -5,7 +5,8 @@
 </head>
 <body>
     <h1>Add Employee</h1>
-    <form action="/employee/add" method="POST">
+    <form action="/employees/add" method="POST">
+        
         <label>First Name: <input type="text" name="firstname" required></label><br>
         <label>Last Name: <input type="text" name="lastname" required></label><br>
         <label>Date of Birth: <input type="date" name="dob" required></label><br>
